modules/docker/mongodb/yaml/01-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-service
  namespace: challenge
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: challenge
    tier: frontal
  type: ClusterIP
