modules/docker/mongodb/yaml/03-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: challenge-service-db
  namespace: challenge
spec:
  ports:
    - name: http
      port: 27017
      protocol: TCP
      targetPort: 27017
  selector:
    app: challenge-db
    tier: database
  type: ClusterIP
