modules/docker/mongodb/yaml/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: challenge-ingress
  namespace: challenge
spec:
  defaultBackend:
    service:
      name: challenge-service
      port:
        number: 80
  rules:
    - host: challenge.domain.com
      http:
        paths:
          - backend:
              service:
                name: challenge-service
                port:
                  number: 80
            path: /
            pathType: Prefix
